fix: measuring total sent and received bytes (#552)
* fix: measuring total sent and received bytes

* fix: updating gRPC and HTTP modules

* test: adding test for NodeHandler
